tests/negative/expr_reify_smoke_block.lev
// LA-31 Stage 2 §8.3 — a block-bodied lambda is rejected (E2 / "block body", R9).
class User { int age; new User(int g) { age = g; } }
string useIt(expr::Expr<(User)=>bool> e) { return "x"; }
console.writeln(useIt((u) => { return u.age > 0; }));
